build: asset tasks

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,20 @@
 <!doctype html>
-<html>
+<html lang="en-US">
 <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
+  <title>Steamy</title>
+
+  <link rel="stylesheet" href="/lib/normalize.css/normalize.css" />
+  <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.css" />
+  <link rel="stylesheet" href="/dist/css/app.css" />
 </head>
 <body>
 
 <p>Yes. I am alive.</p>
+
+<script src="/dist/js/lib.js"></script>
+<script src="/dist/js/app.js"></script>
 
 </body>
 </html>
