what about your friends~

--- a/assets/src/templates/users/index.html
+++ b/assets/src/templates/users/index.html
@@ -10,7 +10,7 @@
   <!-- Friends -->
 
   <div class="friend-list" 
-    ng-if="false && isFinished.userProfile && data.friends" 
+    ng-if="isFinished.userProfile && data.friends" 
   >
     <ul>
       <li ng-repeat="friend in data.friends" 
