--- a/assets/src/templates/users/user-profile.html
+++ b/assets/src/templates/users/user-profile.html
@@ -2,19 +2,23 @@
   ng-if="user"
 >
 
-  <h3>{{ user.personaname }}</h3>
+  <h3>
+  <a ng-href="/users/{{ toCommunityId(user) }}">{{ user.personaname }}</a>
+  </h3>
 
-  <!-- TODO: rounded corners for icon -->
-  <div class="user-icon">
-    <img ng-src="{{user.avatarfull}}" alt="user avatar" />
+  <div class="user-icon" style="background-image: url({{ user.avatarfull }});">
+    <img ng-hide="true" ng-src="{{user.avatarfull}}" alt="user avatar" />
   </div>
 
   <span>{{ user.timecreated | relativeTime }}</span>
   
-  <!-- TODO: font icons for online state -->
   <div class="online-state">
-    <span ng-if="user.personastate === 1">online</span>
-    <span ng-if="user.personastate === 0">last online {{ user.lastlogoff | relativeTime }}</span>
+    <span ng-if="user.personastate === 1">
+      <span class="fa fa-circle"></span> online
+    </span>
+    <span ng-if="user.personastate === 0">
+      <span class="fa fa-circle-o"></span> last online {{ user.lastlogoff | relativeTime }}
+    </span>
   </div>
 
 </div>
