--- a/assets/src/templates/games/game-searchbar.html
+++ b/assets/src/templates/games/game-searchbar.html
@@ -7,5 +7,7 @@
     placeholder="game title / gameid" />
   <button 
     ng-click="searchForGameNews(data.input)"
-  >search</button>
+  >
+    <span class="fa fa-search"></span>
+  </button>
 </div>
