--- a/assets/src/templates/users/user-searchbar.html
+++ b/assets/src/templates/users/user-searchbar.html
@@ -7,5 +7,5 @@
     placeholder="username (from profile url)" />
   <button 
     ng-click="searchForUser(data.input)"
-  >search</button>
+  ><span class="fa fa-search"></span></button>
 </div>
