add friend and games counts to display

--- a/assets/src/styles/users.scss
+++ b/assets/src/styles/users.scss
@@ -1,5 +1,14 @@
 
 .friend-list {
+
+  margin-top: 40px;
+
+  .friend-list-banner {
+    h2 {
+      display: inline;
+    }
+  }
+
   ul {
     padding: 0;
   }
