--- a/assets/src/templates/users/user-searchbar.html
+++ b/assets/src/templates/users/user-searchbar.html
@@ -1,11 +1,13 @@
 
 <div>
-  <h2>users</h2>
+  <h2>USERS</h2>
   <input
+    class="input-search"
     type="text"
     ng-model="data.input"
     placeholder="username (from profile url)" />
-  <button 
+  <button
+    class="btn-icon" 
     ng-click="searchForUser(data.input)"
   ><span class="fa fa-search"></span></button>
 </div>
