--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,13 +12,19 @@
 </head>
 <body>
 
-<h1>
-  <a href="/">Steamy</a>
-</h1>
+<div class="header">
+  <h1>
+    <a href="/">
+      <img src="/dist/img/steamy-logo.png" alt="Steamy" width="174" height="46" />
+    </a>
+  </h1>
+</div>
 
-<p>Yes. I am alive.</p>
+<div class="content-area">
+  <p>Yes. I am alive.</p>
 
-<div ui-view></div>
+  <div ui-view></div>
+</div>
 
 <script src="/dist/js/lib.js"></script>
 <script src="/dist/js/app.js"></script>
