--- a/assets/src/styles/app.scss
+++ b/assets/src/styles/app.scss
@@ -1,6 +1,6 @@
 
 body {
-  margin: 0 30px;
+  margin: 0;
 }
 
 a {
@@ -10,6 +10,35 @@ a {
   &:hover {
     color: #ccc;
   }
+}
+
+.btn-icon {
+  background: none;
+  border: none;
+  outline: none;
+}
+
+input {
+  outline: none;
+  border: 1px solid black;
+  border-radius: 3px;
+  padding: 5px;
+}
+
+.input-search {
+  width: 300px;
+}
+
+.header {
+  background: black;
+  padding: 20px 30px;
+  h1 {
+    margin: 0;
+  }
+}
+
+.content-area {
+  margin: 0 30px;
 }
 
 @import 'user-profile';
