--- a/assets/src/styles/user-profile.scss
+++ b/assets/src/styles/user-profile.scss
@@ -2,16 +2,18 @@
 .user-icon {
   width: 150px;
   height: 150px;
-  background-size: 150px;
+  background-size: 100%;
+  background-position: 50%;
   background-repeat: no-repeat;
   border-radius: 90px 90px;
   border: 1px solid black;
 }
 
 .game-logo {
-  width: 165px;
-  height: 62px;
+  width: 181px;
+  height: 66px;
   background-repeat: no-repeat;
+  background-position: 50%;
   //background-size: 69px 184px;
   border-radius: 20px;
   border: 1px solid black;
