--- a/assets/src/styles/users.scss
+++ b/assets/src/styles/users.scss
@@ -1,4 +1,15 @@
 
+.main {
+  .user-profile {
+    width: 158px;
+    padding: 30px;
+    /* margin: auto; */
+    margin-top: 30px;
+    border: 1px solid black;
+    border-radius: 43px;
+  }
+}
+
 .friend-list {
 
   margin-top: 40px;
