--- a/assets/src/templates/games/game-searchbar.html
+++ b/assets/src/templates/games/game-searchbar.html
@@ -1,11 +1,13 @@
 
 <div>
-  <h2>game news</h2>
+  <h2>GAME NEWS</h2>
   <input
+    class="input-search"
     type="text"
     ng-model="data.input"
     placeholder="game title / gameid" />
   <button 
+    class="btn-icon" 
     ng-click="searchForGameNews(data.input)"
   >
     <span class="fa fa-search"></span>
