Listen for enter key on search bars

--- a/assets/src/templates/games/game-searchbar.html
+++ b/assets/src/templates/games/game-searchbar.html
@@ -5,7 +5,9 @@
     class="input-search"
     type="text"
     ng-model="data.input"
-    placeholder="game title / gameid" />
+    placeholder="game title / gameid"
+    on-enter="searchForGameNews(data.input)"
+  />
   <button 
     class="btn-icon" 
     ng-click="searchForGameNews(data.input)"
