Display loading icon when requests are being made

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,10 @@
   </h1>
 </div>
 
+<div class="loading-indicator" ng-class="{hide: !isLoading}">
+  <i class="fa fa-spinner fa-pulse"></i>
+</div>
+
 <div class="content-area">
   <p>Yes. I am alive.</p>
 
