--- a/assets/src/styles/app.scss
+++ b/assets/src/styles/app.scss
@@ -12,6 +12,10 @@ a {
   }
 }
 
+.hide {
+  display: none;
+}
+
 .btn-icon {
   background: none;
   border: none;
@@ -39,6 +43,19 @@ input {
 
 .content-area {
   margin: 0 30px;
+}
+
+.loading-indicator {
+  position: fixed;
+  //z-index: -1;
+  bottom: 0;
+  text-align: center;
+  padding: 10px 0;
+  width: 100%;
+  background: #777;
+  border-top: 1px solid #555;
+  opacity: 0.7;
+  color: white;
 }
 
 @import 'user-profile';
