Fix displayed playtime units

--- a/assets/src/styles/games.scss
+++ b/assets/src/styles/games.scss
@@ -15,4 +15,13 @@
     padding-right: 45px;
     padding-bottom: 40px;
   }
+
+  .playtime {
+    margin-top: 8px;
+
+    .top-label {
+      margin-bottom: 4px;
+    }
+  }
+
 }
