--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,9 @@
 <body>
 
 <div class="header">
+
+  <div navbar></div>
+
   <h1>
     <a href="/">
       <img src="/dist/img/steamy-logo.png" alt="Steamy" width="174" height="46" />
