Implement view for finding shared games between users

--- a/assets/src/styles/users.scss
+++ b/assets/src/styles/users.scss
@@ -29,4 +29,12 @@
     //padding-right: 30px;
     padding-bottom: 40px;
   }
+
+  .selected {
+    color: #ccc;
+    a {
+      color: #ccc;
+    }
+  }
+
 }
